--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@ function hexToRgb(e){var a=/^#?([a-f\d])([a-f\d])([a-f\d])$/i;e=e.replace(a,func
 </script>
 
 <style type="text/css">
-	/* ---- reset ---- */ body{ margin:0; font:normal 75% Raleway; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #b61924; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; }
+	/* ---- reset ---- */ body{ margin:0; font:normal 75% Raleway; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #000; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; }
 	.headline{
     color: #fff;
     font-size: 4em;
     z-index: 10000;
     position: absolute;
     top: 47%;
-    left: 37%;
+		margin: auto;
+    width: 100%;
+    text-align: center;
 	}
 </style>
 
