--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ function hexToRgb(e){var a=/^#?([a-f\d])([a-f\d])([a-f\d])$/i;e=e.replace(a,func
 </script>
 <script type="text/javascript">
 	var options = {
-  strings: ["", "Coming soon."],
+  strings: ["", "Я сегодня тоже занят. Да и завтра тоже занят."],
   typeSpeed: 40
 }
 
